--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.5",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.6.2",
@@ -22,12 +23,14 @@
     "eslint-config-next": "^13.0.0",
     "next": "^13.0.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.1.0",
     "@types/node": "^18.7.11",
     "@types/react": "^18.0.17",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.6",
     "typescript": "^4.7.4"
   }
