--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,8 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1", features = ["api-all"] }
 printpdf = { version = "0.5.3", features = ["embedded_images"] }
 image = "0.24.4"
+directories = "4.0.1"
+nanoid = "0.4.0"
 
 [features]
 # by default Tauri runs in production mode
