--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.6.2",
+    "@mantine/dropzone": "^5.6.3",
     "@mantine/ds": "^5.6.3",
     "@mantine/hooks": "^5.6.2",
     "@mantine/next": "^5.6.2",
     "@mantine/notifications": "^5.6.2",
     "@mantine/prism": "^5.6.3",
+    "@mantine/rte": "^5.7.0",
     "@tabler/icons": "^1.108.0",
     "@tauri-apps/api": "^1.1.0",
+    "@types/react-highlight-words": "^0.16.4",
     "cookies-next": "^2.1.1",
     "eslint-config-next": "^13.0.0",
     "next": "^13.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.18.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.1.0",
