--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,8 @@ printpdf = { version = "0.5.3", features = ["embedded_images"] }
 image = "0.24.4"
 directories = "4.0.1"
 nanoid = "0.4.0"
+base64 = "0.13.1"
+regex = "1.7.0"
 
 [features]
 # by default Tauri runs in production mode
